--- a/resume.html
+++ b/resume.html
@@ -13,11 +13,11 @@
             <ul>
                 <table width="40%">
                     <tr>
-                        <td><a href="#" >HOME </a>  </td>
-                            <td><a href="#" >| ABOUT </a>  </td>
-                                <td><a href="#" >| RESUME </a>  </td>
-                                    <td><a href="#" >| PORTFOLIO </a>  </td>
-                                        <td><a href="#" >| CONTACT </a>  </td>
+                        <td><a href="#HOME" >HOME </a>  </td>
+                            <td><a href="#ABOUT" >| ABOUT </a>  </td>
+                                <td><a href="#RESUME" >| RESUME </a>  </td>
+                                    <td><a href="#PORTFOLIO" >| PORTFOLIO </a>  </td>
+                                        <td><a href="#CONTACT" >| CONTACT </a>  </td>
                     </tr>
                 </table>
             </ul>
